--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,18 @@
+# Dependencies
+gems:                [jekyll-paginate]
+
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
+#relative_permalinks: true
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               Bill Janesh
+tagline:             bjanesh.github.io
+url:                 http://bjanesh.github.io
 paginate:            1
-baseurl:             ""
+baseurl:             "http://bjanesh.github.io/poole/"
 
 # Assets
 #
@@ -20,9 +23,9 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Bill Janesh
+  url:               http://bjanesh.github.io
+  email:             wjanesh@indiana.edu
 
 # Custom vars
 version:             2.0.0
